fix overflow mobile

--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ h7 {
     var(--bg-color) 100%
   );
   height: 40%;
+  overflow-x: hidden;
 }
 
 .cont {
